tests/ui/closures/2229_closure_analysis/diagnostics/arrays.stderr
error[E0503]: cannot use `arr[_]` because it was mutably borrowed
  --> $DIR/arrays.rs:14:5
   |
LL |     let mut c = || {
   |                 -- `arr` is borrowed here
LL |         arr[0] += 10;
   |         --- borrow occurs due to use of `arr` in closure
...
LL |     arr[1] += 10;
   |     ^^^^^^^^^^^^ use of borrowed `arr`
LL |
LL |     c();
   |     - borrow later used here

error[E0506]: cannot assign to `arr[_]` because it is borrowed
  --> $DIR/arrays.rs:28:5
   |
LL |     let c = || {
   |             -- `arr[_]` is borrowed here
LL |         println!("{:#?}", &arr[3..4]);
   |                            --- borrow occurs due to use in closure
...
LL |     arr[1] += 10;
   |     ^^^^^^^^^^^^ `arr[_]` is assigned to here but it was already borrowed
LL |
LL |     c();
   |     - borrow later used here

error[E0506]: cannot assign to `arr[_]` because it is borrowed
  --> $DIR/arrays.rs:42:5
   |
LL |     let c = || {
   |             -- `arr[_]` is borrowed here
LL |         println!("{}", arr[3]);
   |                        --- borrow occurs due to use in closure
...
LL |     arr[1] += 10;
   |     ^^^^^^^^^^^^ `arr[_]` is assigned to here but it was already borrowed
LL |
LL |     c();
   |     - borrow later used here

error[E0502]: cannot borrow `arr[_]` as immutable because it is also borrowed as mutable
  --> $DIR/arrays.rs:56:20
   |
LL |     let mut c = || {
   |                 -- mutable borrow occurs here
LL |         arr[1] += 10;
   |         --- first borrow occurs due to use of `arr` in closure
...
LL |     println!("{}", arr[3]);
   |                    ^^^^^^ immutable borrow occurs here
...
LL |     c();
   |     - mutable borrow later used here
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0502]: cannot borrow `arr` as immutable because it is also borrowed as mutable
  --> $DIR/arrays.rs:71:24
   |
LL |     let mut c = || {
   |                 -- mutable borrow occurs here
LL |         arr[1] += 10;
   |         --- first borrow occurs due to use of `arr` in closure
...
LL |     println!("{:#?}", &arr[3..2]);
   |                        ^^^ immutable borrow occurs here
...
LL |     c();
   |     - mutable borrow later used here

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0502, E0503, E0506.
For more information about an error, try `rustc --explain E0502`.
